--- a/index.html
+++ b/index.html
@@ -4,22 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kisan-Ecommerce</title>
+
+    <!-- Favicon link  -->
+    <link
+      rel="shortcut icon"
+      href="resources/kisanFavicon.png"
+      type="image/x-icon"
+    />
     <!-- External CSS -->
     <link rel="stylesheet" href="style.css" />
-    <!-- boostrap cdn -->
+
+    <!-- bootstrap cdn -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <!-- google font family -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
   </head>
-  <body></body>
+  <body>
+    <!-- Navigation Section -->
+    <section id="nav-bar">
+      <div>
+        <i class="bi bi-person-circle"></i>
+        <span>Login</span>
+      </div>
+      <div>
+        <i class="bi bi-cart-fill"></i>
+        <span>Cart</span>
+      </div>
+      <div id="help-desk">
+        <!-- <i class="bi bi-headset"></i> -->
+        <i class="bi bi-mic"></i>
+        <span>Support</span>
+      </div>
+    </section>
+
+    <!-- Main Section -->
+
+    <!-- Footer Section -->
+  </body>
 </html>
